added confidential keystore

--- a/keystore.properties
+++ b/keystore.properties
@@ -1,4 +1,4 @@
-storePassword=123456
-keyPassword=123456
-keyAlias=key0
-storeFile=../android.jks
+storePassword=
+keyPassword=
+keyAlias=
+storeFile=../barkoder-keystore.jks
