restructured code into packages

--- a/keystore.properties
+++ b/keystore.properties
@@ -1,4 +1,4 @@
-storePassword=
-keyPassword=
-keyAlias=
+storePassword=bCaxPP
+keyPassword=kt3yZZ
+keyAlias=barkoder-alias
 storeFile=../barkoder-keystore.jks
